<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="100dp" >

    <ImageView
        android:id="@+id/iv_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_1"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_username"
        android:lines="1"
        android:textColor="@color/result_text"
        android:textColorHint="@color/result_text" />

    <EditText
        android:id="@+id/et_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:lines="1"
        android:textColor="@color/result_text"
        android:textColorHint="@color/result_text" />

    <LinearLayout
        android:id="@+id/ly_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_cancel"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_rm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_cancel"
            android:layout_gravity="left"
            android:layout_weight="3"
            android:text="@string/checkbox_re"
            android:textColor="@color/result_text" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/button_register"
            android:textColor="@color/result_text"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/shape"
        android:text="@string/button_confirm"
        android:textColor="@color/result_text" />



</RelativeLayout>
